contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -679,7 +679,7 @@ footer {
     text-transform: uppercase;
     font-size: 0.7em;
     font-weight: 600;
-    color: rgb(63, 121, 230);
+    color: var(--primary);
     padding: 10px 7px 0;
 }
 
